--- a/index.html
+++ b/index.html
@@ -8,39 +8,108 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="img/logo.ico">
   <link rel="stylesheet" href="css/cdn.jsdelivr.net_npm_bootstrap@5.3.0_dist_css_bootstrap.min.css">
-  <title>مدكر</title>
+  <title>مدّكر</title>
 </head>
 
 
 <body>
-  <div class="navbar fixed-top navbar-expand-md navbar-dark navbar-scrolled p-md-3">
-    <div class="container">
-      <!--logo-->
+  <!-- NAVBAR -->
+  <div class="navbar navbar-expand-lg sticky-top bg-light">
+    <div class="container-fluid">
+
       <a href="#" class="navbar-brand">
-        <img src="img/2-removebg-preview.png" width="50" height="50" alt="">
+        <img src="img/logo.png" width="50" height="44" alt="شعار مدَّكر">
       </a>
-      <!-- تقلر -->
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainmenu"
         aria-expanded="false" aria-label="toggle navbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <!-- قائمه navbar-->
       <div class="collapse navbar-collapse" id="mainmenu">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a href="#page1" class="nav-link">الرئيسيه</a></li>
-          <li class="nav-item"><a href="#page2" class="nav-link"> من نحن؟</a></li>
-          <li class="nav-item"><a href="#page3" class="nav-link">مميزاتنا </a></li>
-          <li class="nav-item"><a href="#page4" class="nav-link"> ارقامنا</a></li>
-          <li class="nav-item"><a href="#page5" class="nav-link">كيف يعمل؟</a></li>
-          <li class="nav-item"><a href="#page6" class="nav-link">جديدنا</a></li>
-          <li class="nav-item"><a href="#page7" class="nav-link">التطبيق</a></li>
-          <li class="nav-item"><a href="#page8" class="nav-link">تواصل معنا</a></li>
+        <ul class="navbar-nav col-12 col-lg-auto ms-lg-auto mb-2 justify-content-center">
+          <li class="nav-item"><a href="#" class="nav-link active">الرئيسية</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">حول نظام إنجاز</a></li>
+
+          <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">المجمعات</a>
+            <ul class="dropdown-menu">
+              <!-- TODO: loop through -->
+              <li><a class="dropdown-item" href="#">مجمع أ</a></li>
+              <!--  -->
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">الدور النسائية</a>
+            <ul class="dropdown-menu">
+              <!-- TODO: loop through -->
+              <li><a class="dropdown-item" href="#">دار أ</a></li>
+              <!--  -->
+            </ul>
+          </li>
+
+          <li class="nav-item"><a href="#" class="nav-link">المناهج</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">الدعم الفني</a></li>
         </ul>
+
+        <div class="text-end">
+          <button class="btn btn-primary me-2">تسجيل الدخول</button>
+          <button class="btn btn-outline-primary me-2">تسجيل جديد</button>
+        </div>
       </div>
 
     </div>
   </div>
-  <!-- نهايه navbar-->
+
+  <!-- CAROUSEL -->
+  <div id="carouselExampleLight" class="carousel carousel-light slide" data-bs-ride="carousel">
+
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleLight" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleLight" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleLight" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+
+    <!-- TODO: fill images "alt" -->
+    <div class="carousel-inner">
+
+      <div class="carousel-item active" data-bs-interval="3000">
+        <img src="img/aivalable.png" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="img/bgHeader.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="img/bgHeader.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+
+    </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">التالي</span>
+    </button>
+
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">السابق</span>
+    </button>
+
+  </div>
 
   <!-- section (1) beginning-->
   <section id="page1">
